# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.633 2006/06/15 22:18:51 wolf31o2 Exp $

  15 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/bootloader-setup.sh:
  Added a second pass to the alpha bootloader setup to create aboot items for
  serial console for bug #133457.

  12 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  +livecd/cdtar/arcload-0.43-r1.tbz2:
  Added arcload cdtar for mips.

  09 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/netboot/netboot-controller.sh:
  Added make-busybox-symlinks to USE for busybox compile. This is catalyst
  2.0_rc47.

  08 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/generic_stage_target.py, targets/support/livecdfs-update.sh:
  Add patch from bug #135051 to fix the seedcache extraction logic.

  03 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Don't set icon theme to Clearlooks, since it doesn't exist.

  03 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Fix sed on installer icons.

  25 May 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  This is 2.0_rc46.

  23 May 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-controller.sh:
  Added a -type f to the find call in stage1 for bug #132180.

  19 May 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/cdtar/yaboot-1.3.13-cdtar.tar.bz2:
  Updated yaboot cdtar from Daniel Ostrow <dostrow@gentoo.org> so it will boot
  properly on IBM PPC64 machines.

  19 May 2006; Eric Edgar <rocket@gentoo.org> modules/catalyst_support.py,
  modules/generic_stage_target.py:
  Fix DIGESTS output

  16 May 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/rc-update.sh:
  Removed x-setup from default runlevel, as it is now controlled via the
  autoconfig init script.
