@@ -1,5 +1,10 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.633 2006/06/15 22:18:51 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.634 2006/06/19 19:05:02 wolf31o2 Exp $
+
+  19 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
+  targets/support/bootloader-setup.sh:
+  Fixed a problem where we were putting the kernel name in twice and causing
+  and error when using grub as a bootloader. This is for bug #137252.
 
   15 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
   targets/support/bootloader-setup.sh:
